# LucidNN

./: .gitignore  CMakeLists.txt  README.md
src/: Activation.cpp  Activation.h  JsonHandler.cpp  JsonHandler.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  app.py  main.cpp
